# DataConversion

./: .gitignore  ADD_RULE_FORM_ENHANCEMENT.md  ARCHITECTURAL_IMPROVEMENTS_PLAN.md  ARCHITECTURAL_IMPROVEMENTS_STATUS.md  BRANDING_UPDATE.md  DEMO_ENHANCEMENTS_IMPLEMENTATION.md  DEMO_PREPARATION.md  DEMO_SCRIPT.md  ERROR_EXPORT_ENHANCEMENT.md  FEATURE_VERIFICATION_MARCH_30_2026.md  FIELD_CENTRIC_RULES_VIEW_IMPLEMENTATION_PLAN.md  FINAL_INTERFACE_SUCCESS_IMPLEMENTATION.md  FINAL_WORKSPACE_STATUS.md  FSM_DATABRIDGE_ARCHITECTURAL_ANALYSIS.md  FUTURE_ENHANCEMENTS.md  Finance Validation Checklist.xlsx  GITHUB_COMMIT_GUIDE.md  GITHUB_SETUP.md  IMPLEMENTATION_STATUS.md  INSTALL.md  INTERFACE_PARAMETERS_ANALYSIS.md  INTERFACE_RESULT_VERIFICATION_CORRECT_API.md  INTERFACE_VERIFICATION_FIX.md  LOADING_SCREEN_FIX.md  LOAD_RESPONSE_FORMAT_FIX.md  LOAD_TO_FSM_COMPLETION.md  LOAD_TO_FSM_DEBUGGING.md  MAPPING_UI_IMPROVEMENTS.md  MULTI_BUSINESS_CLASS_ARCHITECTURE.md  NEW_FEATURES_GUIDE.md  PAGINATION_ENHANCEMENT.md  PERFORMANCE_ANALYSIS.md  QUICK_START.md  QUICK_START_MULTI_BUSINESS_CLASS.md  README.md  REFERENCE_DATA_UX_IMPROVEMENT.md  RESTART_BACKEND_REQUIRED.md  RULE_SETS_IMPLEMENTATION_PLAN.md  RULE_SETS_PHASE3_PLAN.md  RULE_SETS_USER_GUIDE.md  (+31 more)
FSM_Swagger/: Account.json  GLTransactionInterface.json
Import_Files/: GLTransactionInterface_DEMO.csv  README.md
backend/: .env.example  .gitignore  README.md  check_job.py  check_load_details.py  check_load_results.py  (+69 more)
mcp_server/: QUICK_START.md  README.md  pyproject.toml
mcp_server/src/fsm_workbench_mcp/: __init__.py  server.py
(+619 files in other folders)
