[project]
name = "fsm-workbench-mcp"
version = "1.0.0"
description = "MCP server for FSM Conversion Workbench - AI-powered data conversion automation"
authors = [
    {name = "Van Anthony Silleza", email = "van@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fsm-workbench-mcp = "fsm_workbench_mcp.server:main"
